# Agentic-AI

AI/: Dockerfile  app.py  chatbot.ipynb  chatbot.py  firstworkflow.ipynb  pyproject.toml  streamlit_app.py
AI/Resources/: summary.txt
NovaPay Chatbot/: chatbot.py  main.py  novapay_chatbot.ipynb  pyproject.toml
NovaPay Chatbot/Resources/: summary.txt
OpenAI with tool/: firstworkflow.ipynb  pyproject.toml
