[project]
name = "novapay-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.19.0",
    "load-dotenv>=0.1.0",
    "openai>=2.44.0",
    "openai-agents>=0.17.7",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "requests>=2.34.2",
]
